[workspace]
members = [ "crates/*" ]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = [ "Alex Zhang <alexzhang1030@foxmail.com>" ]
edition = "2021"
license = "MIT"
repository = "https://github.com/alexzhang1030/code-explorer.git"
documentation = "https://github.com/alexzhang1030/code-explorer/blob/main/README.md"
homepage = "https://github.com/alexzhang1030/code-explorer/blob/main/README.md"
description = "code-exloprer monorepo"
readme = "./README.md"

[profile.release]
lto = true
strip = "symbols"
