[package]
name = "code_explorer_binding"
version = "0.0.1"
description = "code-explorer node binding"

documentation.workspace = true

homepage.workspace = true

repository.workspace = true

authors.workspace = true

edition.workspace = true

license.workspace = true

readme.workspace = true

[lib]
crate-type = [ "cdylib" ]

[dependencies]
code_explorer = { path = "../core" }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.9", default-features = false, features = [ "napi4" ] }
napi-derive = "2.16.11"

[build-dependencies]
napi-build = "2.1.3"
