[package]
name = "code_explorer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.10"
tree-sitter-javascript = "0.20.4"
tree-sitter-typescript = "0.20.5"
