[package]
name = "code_explorer"
version = "0.0.2"
description = "Code analysis powered by tree-sitter"

documentation.workspace = true

homepage.workspace = true

repository.workspace = true

authors.workspace = true

edition.workspace = true

license.workspace = true

readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.24.3"
tree-sitter-javascript = "0.23.0"
tree-sitter-typescript = "0.23.0"
